<resources>
    <string name="app_name">Тест</string>
    <string name="enter_text">Здравствуйте!\nЭтот тест поможет Вам узнать себя!\n\nПредлагаемые задания
    направлены на комплексное исследование различных параметров слухоречевой и зрительной памяти.
    Для получения результата необходимо выполнить все задания.\nВремя прохождения теста составляет 20 минут.\n</string>
    <string name="title_activity_login">Анкета</string>
    <string name="enter_profile_text">Давайте знакомиться!</string>
    <string name="male">Мужской</string>
    <string name="famale">Женский</string>
    <string name="malefamale">Пол</string>
    <string name="name">ФИО</string>
    <string name="next">Продолжить</string>
    <string name="age">Возраст</string>
    <string name="education">Деятельность</string>
    <string name="error">ОШИБКА!</string>
    <string name="enter_testing_manifest">Приступим к тестированию. \n\nВам будет предложено 11 слов для запоминания.
    Прослушайте их и введите те слова, которые запомнили.\nПеред началом проверьте работоспособность динамиков (наушников).
    Определите оптимальную для себя громкость.
 </string>
    <string name="sound">Начать прослушивание</string>
    <string name="text_sound">Введите через ПРОБЕЛ слова, которые запомнили.</string>
    <string name="enter_testing_manifest_sound">Прослушайте слова еще раз и введите их по памяти.\n\nЕсли готовы - нажмите кнопку.
</string>
    <string name="enter_testing_image_manifest">Протестируем зрительную память.\n Вам будет
    предложено запомнить 12 фигур в течении определенного времени. После предъявления фигур -
    выберете из списка все, которые запомнили.</string>
    <string name="image">Начать просмотр</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="ready_result">ГОТОВО</string>
    <string name="pause_one">Первая интерферферирующая пауза</string>
    <string name="data">Данные о пользователе</string>
    <string name="result_sound123">Результаты первых \nтрех слуховых проб(слух)</string>
    <string name="result_sound_C1">Результат С1</string>
    <string name="result_sound_C2">Результат С2</string>
    <string name="result_image_123">Результаты первых \nтрех визуальных проб(картинки)</string>
    <string name="result_image_Z1">Результат Z1</string>
    <string name="text_data">Иванов Иван/45/Высшее</string>
    <string name="sound_result">10/9/8</string>
    <string name="sound_result_C1">10</string>
    <string name="sound_result_C2">10</string>
    <string name="result_image">10/10/10</string>
    <string name="image_result_Z1">10</string>
    <string name="result_image_Z2">Результат Z2</string>
    <string name="image_result_Z2">10</string>
    <string name="enter_testing_new_words">Сейчас Вы услышите старые слова вперемешку с новыми.
    Перед Вами будет кнопка, на которую следует нажать, как только услышите слово, которое заучивали
    ранее в ходе тестирования. Будьте внимательны, слова читаются без больших пауз.
</string>
    <string name="pluse">+</string>
    <string name="text_new_words">В прошлом задании Вам воспроизведены новые слова. Если Вы запомнили
какие-нибудь из них, то впишите их в поле, если нет - оставьте пустым и нажмите кнопку.</string>
    <string name="last_image">В этой таблице представлены хорошо\n знакомые фигуры, которые
    Вы запоминали и новые\n фигуры. Выберите только НОВЫЕ фигуры.</string>
    <string name="text_sound_last">Продолжим тестирование.\nДавайте вспомним слова, которые заучивали ранее. Пожалуйста,
    введите их в поле.</string>
    <string name="image_result_last_sound">Результат первого \nотсроченного тестирования(слух)</string>
    <string name="pause_two">Вторая интерферирующая пауза</string>
    <string name="result_sound_new_words">Результат узнавания старых\nслов среди новых</string>
    <string name="result_new_words">Результат непроизвольного\nзапоминания новых слов(C4)</string>
    <string name="result_old_image">Результат первого\nотсрочелнного воспроизведения\n(картинки)</string>
    <string name="pause_three">Третья интерферирующая пауза</string>
    <string name="result_new_image">Результата непроизвольного\nзапоминания новых фигур(Z4)</string>
    <string name="result_old_image_1">Результат выбора\nзаученных изображений</string>
    <string name="etc">Другая информация</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="enter_one_questionnarie">Давайте немного отвлечемся!\n\nСейчас Вам необходимо
    ответить на 20 вопросов. Для каждого вопроса
    будет предложено пять вариантов ответа, в которых \n«1» означает, что вы совершенно не
    согласны с утверждением;\n«2» показывает, что вы отчасти не согласны;\n«3» - нейтральный
    ответ;\n«4» - отчасти согласны;\n«5» - что вы полностью согласны с утверждением.</string>
    <string name="do_testing">Приступить</string>
    <string name="next_test">Продолжить тестирование</string>
    <string name="q1">1. Когда я бываю в саду, я обычно замечаю закономерность в посадках.
</string>
    <string name="q2">2. Если мне нравится предмет мебели, я хочу сначала точно определиться,
    где размещу его в моем доме, прежде чем куплю его.
</string>
    <string name="q3">3. Прежде чем чем-то заняться, я предпочитаю все распланировать.</string>
    <string name="q4">4. В музее я люблю классифицировать картины в соответствии с их
    стилем.
</string>
    <string name="q5">5. Я стараюсь очень внимательно изучать товар в магазине.</string>
    <string name="q6">6. Я предпочитаю обзавестись всеми необходимыми средствами,
    прежде чем начну какой-то проект.
</string>
    <string name="q7">7. Я стараюсь позвонить в отель заранее, если не смогу приехать туда к
    концу дня.
</string>
    <string name="q8">8. Как правило, я стараюсь реагировать сообразно своему окружению.
</string>
    <string name="q9">9. Мне нравится подробно исследовать детали предметов.</string>
    <string name="q10">10. Когда я включаю телевизор, я стремлюсь идентифицировать людей на
    экране.
</string>
    <string name="q11">11. Я легко определяю породы собак, которых вижу.</string>
    <string name="q12">12. Мне нравится думать о том, что случится после того, как я приму
    решение.
</string>
    <string name="q13">13. Мне нравится смотреть на лица людей и пытаться определить, откуда
    родом их предки.
</string>
    <string name="q14">14. Я считаю себя человеком, который составляет далеко идущие планы.
</string>
    <string name="q15">15. Прежде чем я куплю новую рубашку, я думаю о том,
    как она будет сочетаться с другой моей одеждой.
</string>
    <string name="q16">16. Когда я слышу музыку, я люблю различать в ней
    звучание от-дельных инструментов.
</string>
    <string name="q17">17. Когда я нахожусь на выставке, я не спеша наслаждаюсь картинами.
</string>
    <string name="q18">18. Мне нравится строить планы.</string>
    <string name="q19">19. По утрам я часто продумываю наперед, что мне необходимо сделать
    днем.
</string>
    <string name="q20">20. Я предпочитаю исследовать объекты вблизи, чтобы увидеть,
    как меняется цвет их поверхности.
</string>
    <string name="enter_two_questionnarie">Давайте немного отвлечемся!\n\nУ каждого человека
    преобладает определенный тип мышления. Данный опросник поможет вам определить тип своего
    мышления. Если Вы согласны с высказыванием, то нажмите плюс, если нет – минус.</string>
    <string name="qq1">1. Мне легче что-либо сделать самому, чем объяснить
    другому.</string>
    <string name="qq2">2. Мне интересно было бы составлять компьютерные программы.</string>
    <string name="qq3">3. Я люблю читать книги.</string>
    <string name="qq4">4. Мне нравится живопись, скульптура, архитектура.</string>
    <string name="qq5">5. Даже в отлаженном деле я стараюсь что-то улучшить.</string>
    <string name="qq6">6. Я лучше понимаю, если мне объясняют на предметах или рисунках.</string>
    <string name="qq7">7. Я люблю играть в шахматы.</string>
    <string name="qq8">8. Я легко излагаю свои мысли как в устной, так и в письменной форме.</string>
    <string name="qq9">9. Когда я читаю книгу, я зрительно представляю себе ее героев</string>
    <string name="qq10">10. Я предпочитаю самостоятельно планировать свою работу.</string>
    <string name="qq11">11. Мне нравится все делать своими руками.</string>
    <string name="qq12">12. В детстве я создавал(а) свой шифр для переписки с друзьями.</string>
    <string name="qq13">13. Я придаю большое значение сказанному слову.</string>
    <string name="qq14">14. Знакомые мелодии часто вызывают у меня воспоминания.</string>
    <string name="qq15">15. Разнообразные увлечения делают жизнь человека богаче и ярче.</string>
    <string name="qq16">16. При решении задачи мне легче идти методом проб и ошибок.</string>
    <string name="qq17">17. Мне интересно разбираться в природе физических явлений.</string>
    <string name="qq18">18. Мне интересна работа ведущего теле-радиопрограмм, журналиста</string>
    <string name="qq19">19. Мне легко представить предмет или животное, которых нет в природе.</string>
    <string name="qq20">20. Мне больше нравится процесс деятельности, чем сам результат.</string>
    <string name="qq21">21. Мне нравилось в детстве собирать конструктор из деталей.</string>
    <string name="qq22">22. Я предпочитаю точные науки (математику, физику).</string>
    <string name="qq23">23. Меня восхищает точность и глубина некоторых стихотворений.</string>
    <string name="qq24">24. Знакомый запах вызывает в моей памяти прошлые события.</string>
    <string name="qq25">25. Мне трудно подчинять свою жизнь определенной системе.</string>
    <string name="qq26">26. Когда я слышу музыку, мне хочется танцевать.</string>
    <string name="qq27">27. Я понимаю красоту математических формул.</string>
    <string name="qq28">28. Мне легко говорить перед любой аудиторией.</string>
    <string name="qq29">29. Я люблю посещать выставки, спектакли, концерты.</string>
    <string name="qq30">30. Я сомневаюсь даже в том, что для других очевидно.</string>
    <string name="qq31">31. Я люблю заниматься рукоделием, что-то мастерить.</string>
    <string name="qq32">32. Мне интересно было бы расшифровать значения древних символов.</string>
    <string name="qq33">33. Я легко усваиваю грамматические конструкции языка.</string>
    <string name="qq34">34. Я понимаю красоту природы и искусства.</string>
    <string name="qq35">35. Не люблю ходить одним и тем же путем.</string>
    <string name="qq36">36. Мне нравится работа, требующая физической активности.</string>
    <string name="qq37">37. Я легко запоминаю формулы, символы, условные обозначения.</string>
    <string name="qq38">38. Друзья любят слушать, когда я им что-то рассказываю.</string>
    <string name="qq39">39. Мне легко представить в образах содержание рассказа или фильма.</string>
    <string name="qq40">40. Я не могу успокоиться, пока не доведу свою работу до
    совершенства.</string>
    <string name="result">Результаты тестирования</string>
    <string name="sound_total_result">Результат тестирования слухоречевой памяти\n(максимально 50 баллов)</string>
    <string name="result_total_image">Результат тестирования зрительной памяти\n(максимально 50 баллов)</string>
    <string name="result_total">Общий результат</string>
    <string name="finish_text">Спасибо за участие в тестировании! \n\nДля улучшения проекта,
        Вы можете оставить отзыв, нажав кнопку Обратная связь.   </string>
    <string name="exit">Выход</string>
    <string name="important_message">Важное сообщение!</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="yes_go">Да, продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="message_title">Вы уверены в ответе?</string>
    <string name="feedback">Обратная связь</string>
</resources>