<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pauseOneConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.example.velickomarija.diploma.PauseOneActivity">

    <LinearLayout
        android:id="@+id/pauseOneLinearLayout"
        android:layout_width="667dp"
        android:layout_height="323dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/start_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="5dp"
            android:text="@string/pause_one"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/pauseOneTableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/pauseOneTableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dataTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/data"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_data"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/soundResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_sound123"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_result"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultSoundC1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_sound_C1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_sound_C1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_result_C1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultSoundC2TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_sound_C2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_sound_C2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_result_C2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultImageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_image_123"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_image_123"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_image"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultImageZ1textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_image_Z1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_image_Z1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_result_Z1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultImageZ2textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_image_Z2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_image_Z2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_result_Z2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow7a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultSoundLastTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/image_result_last_sound"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_sound_last_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_result_C1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseOneTableRow8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonNextPart"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:onClick="onClickToGoTestingSoundNewWords"
                    android:paddingVertical="10dp"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
