<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/start_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/pauseOneTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/resultTableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/soundResultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/sound_total_result"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/text_view_result_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/sound_result"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultTableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/result_total_image"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/result_Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/sound_result_C1"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultTableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultTotalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:layout_gravity="center"
                android:text="@string/result_total"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/result_Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/sound_result_C2"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonNextPart"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/exit"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sdp"
            android:textStyle="normal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
