<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.velickomarija.diploma.PauseThreeActivity">

    <LinearLayout
        android:id="@+id/pauseThreeLinearLayout"
        android:layout_width="667dp"
        android:layout_height="323dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/start_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="5dp"
            android:text="@string/pause_three"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/pauseThreeTableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/pauseTwoTableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dataTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/data"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_data"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseThreeTableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/soundResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_old_image_1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_old_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_result_Z2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseThreeTableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resultSoundNWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:text="@string/result_new_image"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_result_new_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_result_C1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:id="@+id/pauseThreeTableRow8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonNextPart"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:onClick="onClickToGoTestingImageNew"
                    android:paddingVertical="10dp"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
