<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/start_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/finish_text"
        android:textAlignment="center"
        android:textColor="#047fd1"
        android:textSize="@dimen/_18sdp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/feedback_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_28sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:paddingBottom="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/feedback"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="normal"
            android:visibility="gone" />

        <Button
            android:id="@+id/exit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_28sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/_12sdp"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="normal"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>